Fix image wrapping

--- a/sensors/sensors_page.css
+++ b/sensors/sensors_page.css
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    width: 80vw;
 }
 
 #sensor_images > div {
@@ -45,7 +46,7 @@
 
 #sensor_images img {
     width: 500px;
-    max-width: 95vw;
+    max-width: 97vw;
     border: 0.1em solid black;
 }
 
